--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@
 
 # Ignore Mac things
 .DS_Store
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
