--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bulma": "^0.9.1",
-    "three": "^0.122.0"
+    "three": "^0.122.0",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
