--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@rails/ujs": "^6.0.0",
     "bulma": "^0.9.1",
+    "three": "^0.123.0",
     "turbolinks": "^5.2.0"
   }
 }
