--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@rails/ujs": "^6.0.0",
     "bulma": "^0.9.1",
+    "d3-scale": "^3.2.3",
     "three": "^0.123.0",
     "turbolinks": "^5.2.0",
     "yarn": "^1.22.10"
